--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -45,7 +45,7 @@ Carbon is a statically typed programming language that is focusing on safety and
 <p>Carbon-Lang, created to be a "C++ successor". The project is open-source and was started by Google, following in the footsteps of previous Google-made programming languages (Go and Dart). Carbon was introduced at the CppNorth conference in Toronto in July of 2022.
 </p>
 
-<div align="center">
+<div class="text-center">
 <a href="https://www.youtube.com/watch?v=omrY53kbVoA" target="_blank" rel="nofollow noopener noreferrer">
 <img src="../images/youtube.svg" width="200" alt="Carbon Introduction"/>
 </a>
@@ -99,7 +99,7 @@ Next quiz does not have a time limit, but you should finish in less than 30 minu
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Carbon_(programming_language)" target="_blank"
     rel="nofollow noopener noreferrer">Wikipedia Carbon</a></li>
-<li><a href="https://github.com/carbon-language"target="_blank"
+<li><a href="https://github.com/carbon-language" target="_blank"
     rel="nofollow noopener noreferrer">GitHub Project</a></li>
 </ul>
 
