--- a/template.html
+++ b/template.html
@@ -1,9 +1,9 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Carbon tutorial. Work in progress.">
-  <meta name="author" content="John Green"">
+  <meta name="author" content="John Green">
   <meta name="keywords" content="carbon, tutorial">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -49,7 +49,7 @@ fn Main() -> i32 {
     Print("Hello, World!");
     return 0;
 }
-</code></code></pre>
+</code></pre>
 
 <!-- work in progress-->
 
