--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Carbon is a statically typed programming language that is focusing on safety and
 
 <hr>
 
-<h2><a id="quiz">Prep Quiz</a></h2>
+<h2><a id="quiz">Carbon Quiz</a></h2>
 
 <div class="alert alert-secondary shadow-sm">
 Next quiz does not have a time limit, but you should finish in less than 30 minutes. You can scan the code using a mobile or tablet. If you are already on mobile device, tap the code below to start the quiz. It requires you to sign-in using your Google account.
