--- a/decision.html
+++ b/decision.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html><head>
   <meta charset="utf-8">
-  <meta name="description" content="Carbon tutorial. Work in progress.">
+  <meta name="description" content="Decision statement in Carbon.">
   <meta name="author" content="John Green">
-  <meta name="keywords" content="carbon, tutorial">
+  <meta name="keywords" content="Carbon, syntax, if, statement">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Website title -->
-  <title>Carbon Tutorial</title>
+  <title>Carbon Decision</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -19,7 +17,7 @@
   <script src="../prism.js"></script>
   <!-- custom css -->
   <link rel="stylesheet" href="../sage.css">
-</head>
+  </head>
 <body>
 
 <div class="container">
@@ -34,28 +32,15 @@
     </div>
 </div><hr>
 
+<h2>Carbon Decision</h2>
 
-<h2>Page Title</h2>
-
-
-<div class="alert alert-secondary shadow-sm">
-Topic description.
-</div>
-
-<pre><code class="language-cpp line-numbers">// code example to be replaced
-package Sample api;    
-
-fn Main() -> i32 {
-    Print("Hello, World!");
-    return 0;
-}
-</code></pre>
+Work In Progress
 
 <!-- work in progress-->
 
 <hr>
 <p><b>Read next:</b>
-<a href="template.html">Page Name</a></p>
+<a href="repetition.html">Repetition</a></p>
 
 <!-- Footer -->
 <footer class="footer">
