--- a/types.html
+++ b/types.html
@@ -1,61 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html><head>
   <meta charset="utf-8">
-  <meta name="description" content="Carbon tutorial. Work in progress.">
-  <meta name="author" content="John Green">
-  <meta name="keywords" content="carbon, tutorial">
+  <meta name="description" content="Learn the basics of Carbon type system.">
+  <meta name="author" content="EJohn Green">
+  <meta name="keywords" content="carbon, type, syntax">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Website title -->
-  <title>Carbon Tutorial</title>
+  <title>Carbon Types</title>  
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <!-- Icon -->
-  <link rel="icon" type="image/png"  href="../images/favicon.ico">
+  <link rel="icon" type="image/png"  href="../images/favicon.ico">  
   <!-- Prism Highlighter -->
   <link rel="stylesheet" href="../prism.css">
   <script src="../prism.js"></script>
   <!-- custom css -->
   <link rel="stylesheet" href="../sage.css">
-</head>
+  </head>
 <body>
 
 <div class="container">
-
+        
 <!-- header -->
 <div class="row">
     <div class="col">
         <a href="https://sagecode.net"><img src="../images/sage-logo.svg" alt="Sage-Code Laboratory" height="80"/></a>
-    </div>
+    </div>  
     <div class="col  bottom-right">
         <a href="index.html#lang-index">index</a>&lt;--
     </div>
 </div><hr>
 
 
-<h2>Page Title</h2>
+<h2>Carbon Types</h2>
 
-
-<div class="alert alert-secondary shadow-sm">
-Topic description.
-</div>
-
-<pre><code class="language-cpp line-numbers">// code example to be replaced
-package Sample api;    
-
-fn Main() -> i32 {
-    Print("Hello, World!");
-    return 0;
-}
-</code></pre>
-
+Work In Progress
 <!-- work in progress-->
 
 <hr>
 <p><b>Read next:</b>
-<a href="template.html">Page Name</a></p>
+<a href="decision.html">Decision</a></p>
 
 <!-- Footer -->
 <footer class="footer">
